# SGNRemoteSQLite

./: CMakeLists.txt
include/: DBInterface.h  RESTful.h  nlohmann_json.hpp
src/: DBInterface.cpp  RESTful.cpp  SGNMain.cpp
